2011-01-03  Andreas Windischer

	* gui/gtk/monocov.glade, gui/gtk/SourceWindow.cs, gui/gtk/MonoCov.cs, gui/gtk/CoverageView.cs:
	Create new source tab in notebook instead of new source window.

2011-01-02  Andreas Windischer

	* gui/gtk/CoverageView.cs: Create the method nodes only when
	the class item is opened

2010-12-30  Andreas Windischer

	* HtmlExporter.cs: Never used private fields removed.
	* gui/gtk/CoverageView.cs: Never used private field removed.
	* MonoConvMain.cs: xml/html-export error handling added.
	* MonoCovMain.cs, MonoCovOptions.cs, gui/gtk/MonoCov.cs, gui/qt/MonoCov.cs, gui/gtk/MonoCov.cs, Makefile, configure:
	Migrate from Mono.GetOptions (obsolete) to Mono.Options

2010-12-28  Andreas Windischer

	* gui/gtk/MonoCov.cs: catch file open error.

2009-01-08  Zoltan Varga  <vargaz@gmail.com>

	* README: Add a status section.

2008-12-02  Peter Johanson  <peter@peterjohanson.com>

	* gui/gtk/CoverageView.cs:
	* gui/gtk/MonoCov.cs: small enhancements to the gtk# UI.

2008-07-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* CoverageModel.cs, symbols.cs: Update to build against latest code
	in Mono.CompilerServices.SymbolWriter.

2007-04-24  Zoltan Varga  <vargaz@gmail.com>

	* gui/gtk/CoverageView.cs: Applied patch from
	Valentin Sawadski <valentin.sawadski@gmx.de>. Add color coding to the
	coverage tree.

2007-04-23  Zoltan Varga  <vargaz@gmail.com>

	* coverage.c: Applied patch from 
	Valentin Sawadski <valentin.sawadski@gmx.de>. Fix handling of generic
	types.

2007-04-21  Zoltan Varga  <vargaz@gmail.com>

	* coverage.c (output_method): Escape classname as well.

Thu Nov 30 17:36:43 CET 2006 Paolo Molaro <lupus@ximian.com>

	* gui/gtk/SourceWindow.cs: work around Gtk bug.
	* coverage.c: disable domain unload for now and make sure
	methods names are encoded correctly in the XML file.

Thu Nov 30 12:15:03 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Ship a Cecil binary in the source tarball. Added a
	configure option to specify a Cecil binary.