@@ -11,7 +11,8 @@ ifeq ($(GUI), gtk)
 GUI_SRCS = \
 	gui/gtk/MonoCov.cs \
 	gui/gtk/CoverageView.cs \
-	gui/gtk/SourceWindow.cs
+	gui/gtk/SourceWindow.cs \
+        gui/gtk/NotebookTabLabel.cs
 GUI_LIBS = -pkg:gtk-sharp-2.0 -pkg:glade-sharp-2.0 -r:System.Drawing -resource:gui/gtk/monocov.glade,monocov.glade
 GUI_DEPS=gui/gtk/monocov.glade
 else
